# control-sim

./: .gitignore  CMakeLists.txt
Coordinates/: Green 3.poly  Hole 1.txt  green3.poly  makeCourse.py
Coordinates/Hole 1/: B1.poly  B2.poly  B3.poly  B4.poly  Green 1.poly  Tee 1.poly
Graphics/: CMakeLists.txt
Graphics/src/MainGFX/: Globals.hpp  Graphics.cpp  Graphics.hpp  Polygons.hpp  UserControls.cpp  UserControls.hpp  controls.cpp  controls.hpp  graphicClass.hpp  parseCourse.cpp  parseCourse.hpp
Graphics/src/Shaders/: BeigeFragmentShader.fragmentshader  GreenFragmentShader.fragmentshader
control-sim/: CMakeLists.txt  main.cpp
